Use separate private keys for each sub-library. Re-configure serum order test for new environment.